Import of INA/Char-UTF2-0.97 from CPAN.
gitpan-cpan-distribution: Char-UTF2
gitpan-cpan-version:      0.97
gitpan-cpan-path:         INA/Char/UTF2/Char-UTF2-0.97.tar.gz
gitpan-cpan-author:       INA
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 --- #YAML:1.0
-name: UTF2
+name: Char::UTF2
 abstract: Source code filter for UTF-8 script (Imitation JPerl)
-version: 0.96
+version: 0.97
 author:
   - INABA Hitoshi <ina@cpan.org>
 license: perl
