--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 --- #YAML:1.0
-name: Char::UTF2
+name: Char-UTF2
 abstract: Source code filter for UTF-8 script (Imitation JPerl)
-version: 0.97
+version: 0.98
 author:
   - INABA Hitoshi <ina@cpan.org>
 license: perl
